...
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="LlJ-3F-4Rf"/>
                                                        <constraint firstAttribute="width" constant="44" id="cHH-wr-pUN"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Active"/>
                                                    <connections>
                                                        <action selector="likeButtonCliked" destination="ZSZ-zL-VZd" eventType="touchUpInside" id="mQZ-Yg-8Np"/>
                                                    </connections>
                                                </button>
                                                <label verifyAmbiguity="ignoreSizes" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12 октября 2025" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CLs
                                                    <rect key="frame" x="24" y="172" width="103" height="16"/>
...
                                <connections>
                                    <outlet property="delegate" destination="JXV-lX-dsx" id="zFz-WS-Aeb"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eIi-FP-0bA">
                                <rect key="frame" x="8" y="67" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="5NE-CC-MjV"/>
                                    <constraint firstAttribute="height" constant="48" id="aJd-6l-y9y"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
            <objects>
                <viewController storyboardIdentifier="AuthViewController" id="cta-ho-JMg" userLabel="AuthViewController " customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="5dd-cd-dEC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jtA-Ov-7gx" userLabel="Entrance">
                                <rect key="frame" x="16" y="612" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="jfn-5w-mmI">
                                        <userDefinedRuntimeAttributes>
...
                                <color key="backgroundColor" name="YP White"/>
                                <color key="progressTintColor" name="YP Black"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="nSC-JL-CSL"/>
                        <color key="backgroundColor" name="YP White"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                        <constraints>
                            <constraint firstItem="nSC-JL-CSL" firstAttribute="top" secondItem="3Sz-OE-nQe" secondAttribute="top" id="02Y-Ho-GEH"/>
                            <constraint firstItem="nSC-JL-CSL" firstAttribute="trailing" secondItem="WNL-Wm-14b" secondAttribute="trailing" id="BWi-ZC-rof"/>
                            <constraint firstItem="3Sz-OE-nQe" firstAttribute="leading" secondItem="4fG-Z9-Ncb" secondAttribute="leading" id="KTr-G7-l5R"/>
                            <constraint firstAttribute="bottom" secondItem="3Sz-OE-nQe" secondAttribute="bottom" id="SkB-jp-2l3"/>
                            <constraint firstItem="WNL-Wm-14b" firstAttribute="top" secondItem="nSC-JL-CSL" secondAttribute="top" id="aqX-xe-ic7"/>
...
